tests/snapshots/examples_fixtures/aoc__2024__Day05Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Day05Solver.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/Day05Solver.flx:106:9
    |
106 |         fold(
    |         ^^^^

Hint:
  Define it first: let fold = ...;
== stdout ==
<not executed>
